--- a/package.json
+++ b/package.json
@@ -15,5 +15,19 @@
   "bugs": {
     "url": "https://github.com/natmertens/myFlix-React-client/issues"
   },
-  "homepage": "https://github.com/natmertens/myFlix-React-client#readme"
+  "homepage": "https://github.com/natmertens/myFlix-React-client#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9"
+  },
+  "devDependencies": {
+    "sass": "^1.35.2"
+  }
 }
